# book_reader

./: .gitignore  README.md  benchmark_embeddings.py  check_gemini_models.py  cleanup.py  pyproject.toml  run.py  test_setup.py
app/: config.py  main.py  models.py  utils.py
app/services/: embedding_service.py  file_processor.py  gemini_service.py  metadata_store.py  vector_store.py
app/templates/: index.html  index_new.html  index_old.html
